# nucli-reed

./: .gitignore  Cargo.toml  README.md
crates/nu-cli/: Cargo.toml
crates/nu-cli-reed/: Cargo.toml
crates/nu-cli-reed/src/: buffer.rs  cli.rs  lib.rs  line_editor.rs  prelude.rs  shell.rs
crates/nu-cli-rusty/: Cargo.toml
crates/nu-cli-rusty/src/shell/: helper.rs
crates/nu-completion/: Cargo.toml
crates/reedline/: Cargo.toml  README.md
crates/reedline/src/: main.rs
doc/: branch.md
examples/: reed.rs  repl-result.rs  repl.rs  rusty.rs
src/: main.rs
versions/: Readme.md
