[package]
authors = ["The Nu Project Contributors"]
default-run = "nu"
description = "reedline integrated into nushell"
documentation = "https://www.nushell.sh/book/"
edition = "2018"
exclude = ["images"]
homepage = "https://www.nushell.sh"
license = "MIT"
name = "nucli-reed"
readme = "README.md"
repository = "https://github.com/stormasm/nucli-reed"
version = "0.32.0"

[workspace]
members = ["crates/*/"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nu-cli-reed = { version = "0.32.0", path = "./crates/nu-cli-reed", default-features = false }
nu-cli-rusty = { version = "0.32.0", path = "./crates/nu-cli-rusty", default-features = false }

nu-command = "0.32.0"
nu-data = "0.32.0"
nu-engine = "0.32.0"
nu-errors = "0.32.0"
nu-parser = "0.32.0"
nu-plugin = "0.32.0"
nu-protocol = "0.32.0"
nu-source = "0.32.0"
nu-value-ext = "0.32.0"

# Required to bootstrap the main binary
clap = "2.33.3"
ctrlc = { version = "3.1.7", optional = true }
futures = { version = "0.3.12", features = ["compat", "io-compat"] }
itertools = "0.10.0"
log = "0.4.14"
pretty_env_logger = "0.4.0"

[dev-dependencies]
nu-test-support = "0.32.0"
dunce = "1.0.1"
serial_test = "0.5.1"
hamcrest2 = "0.3.0"

[features]
ctrlc-support = ["nu-cli-rusty/ctrlc", "nu-command/ctrlc"]
directories-support = [
    "nu-cli-rusty/directories",
    "nu-cli-rusty/dirs",
    "nu-command/directories",
    "nu-command/dirs",
    "nu-data/directories",
    "nu-data/dirs",
    "nu-engine/dirs",
]
rustyline-support = ["nu-cli-rusty/rustyline-support", "nu-command/rustyline-support"]

default = [
    "directories-support",
    "ctrlc-support",
    "rustyline-support",
]

stable = ["default"]

# Main nu binary
[[bin]]
name = "nu"
path = "src/main.rs"
