[package]
authors = ["The Nu Project Contributors"]
default-run = "nu"
description = "reedline integrated into nushell"
documentation = "https://www.nushell.sh/book/"
edition = "2018"
exclude = ["images"]
homepage = "https://www.nushell.sh"
license = "MIT"
name = "nucli-reed"
readme = "README.md"
repository = "https://github.com/stormasm/nucli-reed"
version = "0.34.0"

[workspace]
members = ["crates/*/"]

# only one of the dependencies [nu-cli-reed or nu-cli-rusty] can be on

[dependencies]
nu-cli-reed = { version = "0.34.0", path = "./crates/nu-cli-reed", default-features = false }
reedline = { version = "0.1.0", path = "./crates/reedline", default-features = false }
crossterm = { version = "0.19.0", features = ["serde"] }

nu-command = "0.34.0"
nu-data = "0.34.0"
nu-engine = "0.34.0"
nu-errors = "0.34.0"
nu-parser = "0.34.0"
nu-plugin = "0.34.0"
nu-protocol = "0.34.0"
nu-source = "0.34.0"
nu-value-ext = "0.34.0"

# Required to bootstrap the main binary
ctrlc = { version="3.1.7", optional=true }
futures = { version="0.3.12", features=["compat", "io-compat"] }
itertools = "0.10.0"

[dev-dependencies]
nu-test-support = "0.34.0"
dunce = "1.0.1"
serial_test = "0.5.1"
hamcrest2 = "0.3.0"

[features]
ctrlc-support = ["nu-cli-reed/ctrlc", "nu-command/ctrlc"]
#executable-support = ["nu-cli-reed/executable-support"]

#directories-support = [
#    "nu-cli-reed/directories-next",
#    "nu-cli-reed/dirs-next",
#    "nu-command/directories-next",
#    "nu-command/dirs-next",
#    "nu-data/directories-next",
#    "nu-data/dirs-next",
#    "nu-engine/dirs-next",
#]
rustyline-support = ["nu-cli-reed/rustyline-support", "nu-command/rustyline-support"]

default = [
#    "directories-support",
    "ctrlc-support",
    "rustyline-support",
#    "executable-support"
]

stable = ["default"]

# Main nu binary
[[bin]]
name = "nu"
path = "src/main.rs"
