[package]
authors = ["The Nu Project Contributors"]
build = "build.rs"
description = "CLI for nushell"
edition = "2018"
license = "MIT"
name = "nu-cli-reed"
version = "0.34.0"

[lib]
doctest = false

[dependencies]
reedline = { version = "0.1.0", path = "../reedline"}
nu-completion = { version = "0.34.0", path = "../nu-completion"}

nu-command = "0.34.0"
nu-data = "0.34.0"
nu-engine = "0.34.0"
nu-errors = "0.34.0"
nu-parser = "0.34.0"
nu-path = "0.34.0"
nu-protocol = "0.34.0"
nu-source = "0.34.0"
nu-stream = "0.34.0"
nu-ansi-term = "0.34.0"

crossterm = { version = "0.20.0", features = ["serde"] }
indexmap ="1.6.1"
log = "0.4.14"
pretty_env_logger = "0.4.0"
strip-ansi-escapes = "0.1.0"
rustyline = { version="8.1.0", optional=true }
ctrlc = { version="3.1.7", optional=true }
shadow-rs = { version="0.6", default-features=false, optional=true }
serde = { version="1.0.123", features=["derive"] }
serde_yaml = "0.8.16"

[build-dependencies]
shadow-rs = "0.6"

[features]
default = ["shadow-rs"]
rustyline-support = ["rustyline", "nu-engine/rustyline-support"]
stable = []
